- minor bugfixes